0.2.3
Fixed key propagation to tools!
Added reserved data to page structure.
Fixed bug when plugin must not be unloaded.
Fixed segfault when shutting window with close button rather than using quit.
Changed plugin routine names ( saveFile etc ) to prevent potential clashes.
Fixed key presses not being propagated to plugins.
Added user datalist to page structure for use by plugins.
Fixed plugins in subfolders not being properly sorted on load.

0.2.2
Made 'Get Plugins' open browser as async.
Removed use of xdg-open ( broken in LFS ) can now set the default browser in prefs if internal docviewer is disabled ( defaults to firefox ).
Added context popup menu to data passed to plugins to add to the context pop up.
Added call to "addToContext" functions in plugins.
Added tab popup menu to data passed to plugins to add to the tab pop up.
Added call to "addToTab" functions in plugins.
Removed example-plugin from package as it's available from the website now.
Added search in page of builtin doc viewer (Up/Down).
Fixed bug when trying to jump to non-existant function declaration.
Fixed minor sensitive bug when closing tab.
If documentation doesn't exist when selecting 'Show Documentaion' from the 'View' menu it is now built.
Fixed bookmarks not being removed from closed tab.
Nag screen now only every month.
Added check for update every month.
Added '-s' switch ( safe ) to disable loading of ALL plugins for this session implies '-m'.
Fixed regex for 'Open' from tab popup not showing some files.
~/.KKEdit/plugins now searched first for plugins, ( ie local plugs take precedence over global plugs ).
Plugins now checked for duplicate names on load, only first instance loaded.
Plugins now loaded alphabetically.
If two or more plugins use a left/right pane pane wont be closed until all plugins close it.
Added expander handles to left and right user boxes.
Code Clean
About and/or Preferences in plugin prefs dialog now dimmed if not available in the plugin.

0.2.1